# parsec

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  csv_parser.rs  excel_parser.rs  lib.rs  main.rs  parquet_parser.rs  parser.rs
src/components/: ColumnFilterDropdown.tsx  DataTable.tsx  DropZone.tsx  EmptyState.tsx  FileOptionsDialog.tsx  Toolbar.tsx
src/hooks/: useFileDrop.ts  useFileOpen.ts
src/lib/: invoke.ts
src/types/: data.ts
