[package]
name = "parsec"
version = "0.1.0"
description = "Native file viewer for CSV, Excel, and Parquet files"
authors = []
edition = "2021"

[lib]
name = "parsec_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
encoding_rs = "0.8"
calamine = { version = "0.26", features = ["dates"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
arrow = "54"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
